# uranus

./: .gitignore  Cargo.toml  README.md  log4rs.yaml
example/: number copy.txt  number.txt  regex.txt
example/Scripts/: RoomManager.lua  StoreData.lua
src/: assemble.rs  components.rs  main.rs  panel.rs  pannel.rs  toast.rs  utils.rs
