[package]
name = "uranus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version="0.10.0",features = ["image"]}
rfd = "0.11.4"
same-file = "1.0.6"
regex = "1.9"
log = "0.4.20"
log4rs = "1.2.0"