[package]
name = "uranus"
authors = ["Leyuan.Jia <Leyuan.Jia@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version="0.10.0",features = ["image","advanced"]}
rfd = "0.11.4"
same-file = "1.0.6"
regex = "1.9.3"
log = "0.4.20"
log4rs = "1.2.0"